--- a/config.json
+++ b/config.json
@@ -8,7 +8,7 @@
         "org": "ib-internal",
         "workspace": "CICD",
         "app_id": "b6cf94d3-d446-429b-a756-92733966de6a",
-        "deployment_id": "195aa43-73aa-78b7-b980-65464d8527ac",
+        "deployment_id": "0195aa43-73aa-78b7-b980-65464d8527ac",
         "dependencies": []
     },
     "target": {
