--- a/.github/workflows/merge_and_migrate.yml
+++ b/.github/workflows/merge_and_migrate.yml
@@ -8,6 +8,7 @@ on:
       - README.md
       - Contributing.md
       - .github/**
+      - '**/*.whl'
   workflow_dispatch:
     inputs:
       branch:
